Prevent dockbar from overlapping with child menus
Before the dropdown child menus would overlap a few pixels with the
dockbar, which was very noticable because the background is transparent,
so the color in that overlapping part would appear darker. Now they are
aligned directly adjacent, not overlapping

--- a/themes/noelle-portfolio-theme/docroot/_diffs/css/custom.css
+++ b/themes/noelle-portfolio-theme/docroot/_diffs/css/custom.css
@@ -191,6 +191,8 @@ $dockbarWidth: 67px;
 	}
 
 	.dropdown-menu {
+		top: 50px;
+
 		> .active > a, > .active > a:focus, > .active > a:hover, > li > a:hover {
 			background: #FFF;
 			color: #000;
